# quant-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/skills/quant-backtest-validation/: SKILL.md
.claude/skills/quant-data-pipeline/: SKILL.md
.claude/skills/quant-dev/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: HANDOFF.md
docs/plans/: 2026-05-05-phase1-alpha-engine.md  2026-05-05-phase2-alpha-ml.md  2026-05-05-phase3-portfolio.md  2026-05-05-phase4-dashboard-paper-trading.md  2026-05-05-phase5-derivatives.md
docs/sops/: backtesting-protocol.md  data-handling.md  execution-and-paper-trading.md  git-workflow.md  ml-signal-pipeline.md  portfolio-allocation.md  project-workflow.md  research-methodology.md
scripts/: run_backtest.py  run_paper_trader.py
src/alpha_engine/: __init__.py
src/alpha_engine/analytics/: __init__.py  performance.py
src/alpha_engine/backtest/: __init__.py  compare.py  engine.py  multi_asset.py  types.py  walk_forward.py
src/alpha_engine/derivatives/options/: binomial.py  black_scholes.py  implied_vol.py  levy.py  monte_carlo.py  pde.py  strategies.py
src/alpha_engine/derivatives/volatility/: garch.py  sabr.py  surface.py
src/alpha_engine/execution/: __init__.py  alpaca_broker.py  broker.py  order.py  paper_trader.py
src/alpha_engine/factor/: factor_model.py  regime_factor_model.py
src/alpha_engine/live/: alpaca_stream.py  live_trader.py
src/alpha_engine/portfolio/: __init__.py  allocator.py  black_litterman.py  cardinality.py  cvar.py  equal_weight.py  mc_risk.py  mean_variance.py  merton_hjb.py  risk_parity.py
src/alpha_engine/regime/: hmm_classifier.py  regime_filtered_strategy.py
src/alpha_engine/risk/: __init__.py  position_sizing.py
src/alpha_engine/rl/: portfolio_env.py  rl_agent.py  rl_strategy.py
src/alpha_engine/strategies/: __init__.py  base.py  ema_crossover.py  mean_reversion.py  momentum.py  pairs.py  rsi_strategy.py  sma_crossover.py
src/alpha_ml/: __init__.py  pipeline.py
src/alpha_ml/features/: __init__.py  feature_store.py
src/alpha_ml/models/: __init__.py  base.py  ensemble.py  linear.py  lstm.py  xgboost_model.py
src/alpha_ml/validation/: __init__.py  cross_validate.py  purged_kfold.py
src/quant_dashboard/: __init__.py  app.py
src/quant_dashboard/components/: charts.py
src/quant_dashboard/pages/: 1_Equity_Curve.py  2_Portfolio.py  3_ML_Signal.py  4_Options_Pricing.py  5_Market_Data.py  6_Regime_Analysis.py  7_Factor_Attribution.py
src/quantcore/: __init__.py  config.py
src/quantcore/data/: __init__.py  cleaner.py  fama_french.py  fetcher.py  tradier_client.py
src/quantcore/data/providers/: __init__.py
src/quantcore/features/: __init__.py  pipeline.py
src/quantcore/indicators/: __init__.py  technical.py
src/quantcore/signals/: cointegration.py  kalman_filter.py
src/quantcore/utils/: __init__.py
tests/test_alpha_engine/: test_compare.py  test_ema_crossover.py  test_engine.py  test_execution.py  test_hmm_classifier.py  test_live.py  test_multi_asset.py  test_pairs_strategy.py  test_paper_trader.py  test_performance.py  test_portfolio.py  test_position_sizing.py  test_regime_factor_model.py  test_regime_filtered_strategy.py  test_rl.py  test_rl_strategy.py  test_rsi_strategy.py  test_sma_crossover.py  test_strategies.py  test_types.py  test_walk_forward.py
tests/test_alpha_engine/test_derivatives/: test_binomial.py  test_black_scholes.py  test_garch.py  test_implied_vol.py  test_levy.py  test_monte_carlo.py  test_pde.py  test_sabr.py  test_strategies.py  test_vol_surface.py
tests/test_alpha_engine/test_portfolio/: test_black_litterman.py  test_cardinality.py  test_mc_risk.py  test_merton_hjb.py
tests/test_alpha_ml/: __init__.py  test_cross_validate.py  test_ensemble.py  test_feature_store.py  test_linear.py  test_lstm.py  test_ml_pipeline.py  test_purged_kfold.py  test_xgboost_model.py
tests/test_dashboard/: test_charts.py
tests/test_quantcore/: test_cleaner.py  test_cointegration.py  test_fama_french.py  test_features.py  test_fetcher.py  test_indicators.py  test_kalman_filter.py  test_tradier_client.py
