[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-lab"
version = "0.1.0"
description = "Quantitative Finance Research Lab — strategies, backtesting, ML prediction, and risk analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Marko Babic", email = "babicmarko33@gmail.com" },
]
keywords = ["quantitative-finance", "algorithmic-trading", "backtesting", "machine-learning", "options-pricing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "yfinance>=0.2.31",
    "alpaca-trade-api>=3.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "requests>=2.31",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
# Core ML: gradient boosting + purged k-fold + portfolio optimisation
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "cvxpy>=1.4",
]
# Heavy deep-learning (optional, not required for CI)
deep-learning = [
    "torch>=2.1",
    "numba>=0.58",
]
# Phase 7 advanced research extras
phase7 = [
    "arch>=6.3",
    "statsmodels>=0.14",
    "hmmlearn>=0.3",
    "filterpy>=1.4",
    "websocket-client>=1.7",
    "stable-baselines3>=2.3",
    "gymnasium>=0.29",
]
# Historical backtesting ecosystem extras (optional)
backtest = [
    "quantstats>=0.0.62",
    "PyPortfolioOpt>=1.5",
]
# Interactive analytics dashboard
dashboard = [
    "plotly>=5.18",
    "streamlit>=1.28",
]
# Alternative data providers
providers = [
    "alpha-vantage>=2.3",
    "polygon-api-client>=1.12",
]
# Development tooling
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "ipykernel>=6.27",
    "pandas-stubs>=2.0",
    "pip-audit>=2.6",
]
# Minimal set required to run the full test suite in CI
ci = [
    "quant-lab[dev,ml,dashboard,phase7]",
]
# Everything (excludes heavy deep-learning and third-party providers)
all = ["quant-lab[ml,backtest,dashboard,providers,dev]"]

[project.urls]
Homepage = "https://github.com/babicmarko33/quant-lab"
Repository = "https://github.com/babicmarko33/quant-lab"
Issues = "https://github.com/babicmarko33/quant-lab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quantcore", "src/alpha_engine", "src/alpha_ml", "src/quant_dashboard"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "NPY",  # numpy-specific rules
]
ignore = [
    "S101",   # assert usage OK in tests
    "S311",   # random OK for simulations (not crypto)
    "B008",   # function call in default arg (pydantic)
    "SIM108", # ternary operators reduce readability in ML pipelines
    "C408",   # dict() calls are idiomatic in Plotly/library APIs
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "N802", "N803", "N806"]  # ML/quant fixture names use X uppercase
"src/alpha_ml/**" = ["N803", "N806"]  # ML convention: X uppercase for feature matrices
"src/alpha_engine/derivatives/**" = ["N803", "N806"]  # Finance convention: S, K, T, sigma uppercase
"src/alpha_engine/portfolio/**" = ["N803", "N806", "S112"]  # Finance convention: Sigma, P, Q uppercase; solver loop
"src/quantcore/signals/**" = ["N803", "N806"]  # Kalman filter: Q, R, P, F, K, S uppercase convention
"src/alpha_engine/strategies/pairs.py" = ["SIM114"]  # Pairs strategy exit logic: separate branches are clearer

[tool.ruff.lint.isort]
known-first-party = ["quantcore", "alpha_engine", "alpha_ml", "quant_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring API keys",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["quantcore", "alpha_engine", "alpha_ml"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "alpaca_trade_api.*", "backtrader.*", "vectorbt.*", "quantstats.*", "ta.*"]
ignore_missing_imports = true
